--- a/package.json
+++ b/package.json
@@ -118,5 +118,8 @@
     "prettier": "node ./scripts/prettier/index.js write-changed",
     "prettier-all": "node ./scripts/prettier/index.js write",
     "version-check": "node ./scripts/tasks/version-check.js"
+  },
+  "dependencies": {
+    "yarn": "^1.19.1"
   }
 }
